// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SnitchDialog matches snapshot 1`] = `
<div
  class="bp4-portal"
>
  <div
    aria-live="polite"
    class="bp4-overlay bp4-overlay-open bp4-overlay-scroll-container"
  >
    <div
      class="bp4-overlay-start-focus-trap bp4-overlay-appear bp4-overlay-appear-active"
      tabindex="0"
    />
    <div
      class="bp4-overlay-backdrop bp4-overlay-appear bp4-overlay-appear-active"
    />
    <div
      class="bp4-dialog-container bp4-overlay-content bp4-overlay-appear bp4-overlay-appear-active"
    >
      <div
        aria-labelledby="title-bp-dialog-0"
        class="bp4-dialog snitch-dialog"
        role="dialog"
      >
        <div
          class="bp4-dialog-header"
        >
          <h4
            class="bp4-heading"
            id="title-bp-dialog-0"
          >
            Be snitchin
          </h4>
          <button
            aria-label="Close"
            class="bp4-button bp4-minimal bp4-dialog-close-button"
            type="button"
          >
            <span
              aria-hidden="true"
              class="bp4-icon bp4-icon-small-cross"
              icon="small-cross"
            >
              <svg
                data-icon="small-cross"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <path
                  d="M11.41 10l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L10 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L8.59 10 5.3 13.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l3.29-3.3 3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L11.41 10z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          class="bp4-dialog-body"
        />
        <div
          class="bp4-dialog-footer"
        >
          <div
            class="bp4-dialog-footer-actions"
          >
            <button
              class="bp4-button bp4-intent-primary"
              type="button"
            >
              <span
                class="bp4-button-text"
              >
                Next
              </span>
              <span
                aria-hidden="true"
                class="bp4-icon bp4-icon-arrow-right"
                icon="arrow-right"
              >
                <svg
                  data-icon="arrow-right"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M14.7 7.29l-5-5a.965.965 0 00-.71-.3 1.003 1.003 0 00-.71 1.71l3.29 3.29H1.99c-.55 0-1 .45-1 1s.45 1 1 1h9.59l-3.29 3.29a1.003 1.003 0 001.42 1.42l5-5c.18-.18.29-.43.29-.71s-.12-.52-.3-.7z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="bp4-overlay-end-focus-trap bp4-overlay-appear bp4-overlay-appear-active"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`SnitchDialog matches snapshot with history 1`] = `
<div
  class="bp4-portal"
>
  <div
    aria-live="polite"
    class="bp4-overlay bp4-overlay-open bp4-overlay-scroll-container"
  >
    <div
      class="bp4-overlay-start-focus-trap bp4-overlay-appear bp4-overlay-appear-active"
      tabindex="0"
    />
    <div
      class="bp4-overlay-backdrop bp4-overlay-appear bp4-overlay-appear-active"
    />
    <div
      class="bp4-dialog-container bp4-overlay-content bp4-overlay-appear bp4-overlay-appear-active"
    >
      <div
        aria-labelledby="title-bp-dialog-1"
        class="bp4-dialog snitch-dialog"
        role="dialog"
      >
        <div
          class="bp4-dialog-header"
        >
          <h4
            class="bp4-heading"
            id="title-bp-dialog-1"
          >
            Be snitchin
          </h4>
          <button
            aria-label="Close"
            class="bp4-button bp4-minimal bp4-dialog-close-button"
            type="button"
          >
            <span
              aria-hidden="true"
              class="bp4-icon bp4-icon-small-cross"
              icon="small-cross"
            >
              <svg
                data-icon="small-cross"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <path
                  d="M11.41 10l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L10 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L8.59 10 5.3 13.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l3.29-3.3 3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L11.41 10z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          class="bp4-dialog-body"
        />
        <div
          class="bp4-dialog-footer"
        >
          <div
            class="bp4-dialog-footer-actions"
          >
            <button
              class="bp4-button bp4-minimal left-align-button"
              type="button"
            >
              <span
                class="bp4-button-text"
              >
                History
              </span>
            </button>
            <button
              class="bp4-button bp4-intent-primary"
              type="button"
            >
              <span
                class="bp4-button-text"
              >
                Next
              </span>
              <span
                aria-hidden="true"
                class="bp4-icon bp4-icon-arrow-right"
                icon="arrow-right"
              >
                <svg
                  data-icon="arrow-right"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M14.7 7.29l-5-5a.965.965 0 00-.71-.3 1.003 1.003 0 00-.71 1.71l3.29 3.29H1.99c-.55 0-1 .45-1 1s.45 1 1 1h9.59l-3.29 3.29a1.003 1.003 0 001.42 1.42l5-5c.18-.18.29-.43.29-.71s-.12-.52-.3-.7z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="bp4-overlay-end-focus-trap bp4-overlay-appear bp4-overlay-appear-active"
      tabindex="0"
    />
  </div>
</div>
`;
